# cs455-raytracer

./: .gitignore
Program5/: CMakeLists.txt  Camera.cpp  Camera.h  Light.h  LightDirectional.cpp  LightDirectional.h  Main.cpp  Object.h  Pixel.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Sphere.cpp  Vector3.h
Program5/Image/: Screen.h
Program5/RayTracer/: Ray.h  RayTracer.h
Program5/SceneComponent/: Camera.h  Light.h  LightDirectional.h  Ray.h  SceneComponent.h  Sphere.h
Program5/SceneComponent/Geometry/: Geometry.h  Material.cpp  Material.h  Sphere.h
Program6/: CMakeLists.txt  Main.cpp  Scene.h  Vector3.h
Program6/Image/: Pixel.h
Program6/RayTracer/: Ray.h  RayTracer.h
Program6/SceneComponent/: Camera.h  SceneComponent.h
Program6/SceneComponent/Geometry/: Geometry.h  Material.h  Sphere.h  Triangle.h
Program6/SceneComponent/Light/: Light.h  LightDirectional.h
